--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
 <h2 class="h2">Лекции</h2>
 <input id="q" type="search" placeholder="Поиск по темам..." oninput="filterLectures()">
 <div class="grid">
-<article class="card" data-card data-tags="реймс собор готика жанна">
-<div class="thumb">Реймсский собор</div><div class="body"><h3>Символика готики</h3><p class="desc">Архитектура как текст культуры.</p></div></article>
-<article class="card" data-card data-tags="нотрд ам витражи">
+<article class="card" data-card data-tags="анна ярославна франция киевская русь средневековье">
+  <a href="https://youtu.be/YAJPMhlDSFM" target="_blank">
+    <div class="thumb">Анна Ярославна и 33 короля. Тайны Реймсского собора</div>
+  </a>
+  <div class="body">
+    <h3>История собора и тайны архитектуры</h3>
+    <p class="desc"> Реймс — город, где короновали французских королей, где сквозь готические витражи светит история</p>
+  </div>
+</article>
 <div class="thumb">Нотр-Дам</div><div class="body"><h3>Нотр-Дам де Пари</h3><p class="desc">Иконография и реставрация.</p></div></article>
 <article class="card" data-card data-tags="укийо-э моне ван гог">
 <div class="thumb">Укийо-э</div><div class="body"><h3>Японские гравюры</h3><p class="desc">Влияние на Европу.</p></div></article>
