--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <div class="grid">
 <article class="card" data-card data-tags="анна ярославна франция киевская русь средневековье">
   <a href="https://youtu.be/YAJPMhlDSFM" target="_blank">
-    <div class="thumb">Анна Ярославна и 33 короля. Тайны Реймсского собора</div>
+    <div class="thumb">Анна Ярославна и 33 короля. Тайны Реймсского собора>
+    </div>
+    <img src="https://img.youtube.com/vi/YAJPMhlDSFM/0.jpg" alt="Анна Ярославна и 33 короля. Тайны Реймсского собора">  
   </a>
   <div class="body">
     <h3>История собора и тайны архитектуры</h3>
