--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </header>
 <section class="hero">
 <img src="assets/cover.svg" alt="Art pause cover">
-<div class="hero-text">Там, где кончается кисть — начинаются слова.<br><span>Авторские лекции Ольги Федоровской.</span></div>
+<div class="hero-text">Там, где кончается кисть<br><span>Авторские лекции Ольги Федоровской.</span></div>
 </section>
 <section id="lectures" class="section">
 <h2 class="h2">Лекции</h2>
@@ -31,8 +31,17 @@
     <h3>История собора и тайны архитектуры</h3>
     <p class="desc"> Реймс — город, где короновали французских королей, где сквозь готические витражи светит история</p>
   </div>
+<article class="card" data-card data-tags="ваша_тема_теги">
+  <a href="https://youtu.be/ZwnLyJ_kHMc" target="_blank">
+    <div class="thumb">
+      <img src="https://img.youtube.com/vi/ZwnLyJ_kHMc/0.jpg" alt="Код Ван Эйка. Кража, деньги и распил: приключения Гентского алтаря">
+    </div>
+  </a>
+  <div class="body">
+    <h3>Код Ван Эйка. Кража, деньги и распил: приключения Гентского алтаря</h3>
+    <p class="desc">Почти сто лет мир пытается разгадать загадку исчезнувшей части Гентского алтаря. Этот шедевр пережил иконоборцев, революции, пожары и нацистскую охоту за искусством</p>
+  </div>
 </article>
-<div class="thumb">Нотр-Дам</div><div class="body"><h3>Нотр-Дам де Пари</h3><p class="desc">Иконография и реставрация.</p></div></article>
 <article class="card" data-card data-tags="укийо-э моне ван гог">
 <div class="thumb">Укийо-э</div><div class="body"><h3>Японские гравюры</h3><p class="desc">Влияние на Европу.</p></div></article>
 </div>
