--- a/index.html
+++ b/index.html
@@ -41,9 +41,18 @@
     <h3>Код Ван Эйка. Кража, деньги и распил: приключения Гентского алтаря</h3>
     <p class="desc">Почти сто лет мир пытается разгадать загадку исчезнувшей части Гентского алтаря. Этот шедевр пережил иконоборцев, революции, пожары и нацистскую охоту за искусством</p>
   </div>
+<article class="card" data-card data-tags="лувр мода выставка louvre couture костюм история">
+  <a href="https://youtu.be/LyWQrdfF22Q" target="_blank">
+    <div class="thumb">
+      <img src="https://img.youtube.com/vi/LyWQrdfF22Q/0.jpg" alt="О чём молчат платья: модный приговор в Лувре">
+    </div>
+  </a>
+  <div class="body">
+    <h3>О чём молчат платья: модный приговор в Лувре</h3>
+    <p class="desc">Что, если платья умеют говорить? А если они молчат — то о чём?<br>
+    Это видео — не просто экскурсия по выставке Louvre Couture. Это разговор о тайнах, спрятанных в складках шелка, шипах металла и линиях силуэтов.</p>
+  </div>
 </article>
-<article class="card" data-card data-tags="укийо-э моне ван гог">
-<div class="thumb">Укийо-э</div><div class="body"><h3>Японские гравюры</h3><p class="desc">Влияние на Европу.</p></div></article>
 </div>
 </section>
 <section id="about" class="section"><h2 class="h2">О проекте</h2><p>Мы говорим о том, как литература, искусство и история переплетаются и помогают понять прошлое, настоящее и самих себя.</p></section>
