--- a/index.html
+++ b/index.html
@@ -21,39 +21,46 @@
 <h2 class="h2">Лекции</h2>
 <input id="q" type="search" placeholder="Поиск по темам..." oninput="filterLectures()">
 <div class="grid">
-<article class="card" data-card data-tags="анна ярославна франция киевская русь средневековье">
-  <a href="https://youtu.be/YAJPMhlDSFM" target="_blank">
-    <div class="thumb">Анна Ярославна и 33 короля. Тайны Реймсского собора>
+
+  <article class="card" data-card data-tags="анна ярославна франция киевская русь средневековье">
+    <a href="https://youtu.be/YAJPMhlDSFM" target="_blank">
+      <div class="thumb">
+        <img src="https://img.youtube.com/vi/YAJPMhlDSFM/0.jpg" alt="Анна Ярославна и 33 короля. Тайны Реймсского собора">
+      </div>
+    </a>
+    <div class="body">
+      <h3>История собора и тайны архитектуры</h3>
+      <p class="desc">Реймс — город, где короновали французских королей, где сквозь готические витражи светит история.</p>
     </div>
-    <img src="https://img.youtube.com/vi/YAJPMhlDSFM/0.jpg" alt="Анна Ярославна и 33 короля. Тайны Реймсского собора">  
-  </a>
-  <div class="body">
-    <h3>История собора и тайны архитектуры</h3>
-    <p class="desc"> Реймс — город, где короновали французских королей, где сквозь готические витражи светит история</p>
-  </div>
-<article class="card" data-card data-tags="ваша_тема_теги">
-  <a href="https://youtu.be/ZwnLyJ_kHMc" target="_blank">
-    <div class="thumb">
-      <img src="https://img.youtube.com/vi/ZwnLyJ_kHMc/0.jpg" alt="Код Ван Эйка. Кража, деньги и распил: приключения Гентского алтаря">
+  </article>
+
+  <article class="card" data-card data-tags="гентский алтарь ван эйк кража">
+    <a href="https://youtu.be/ZwnLyJ_kHMc" target="_blank">
+      <div class="thumb">
+        <img src="https://img.youtube.com/vi/ZwnLyJ_kHMc/0.jpg" alt="Код Ван Эйка. Кража, деньги и распил: приключения Гентского алтаря">
+      </div>
+    </a>
+    <div class="body">
+      <h3>Код Ван Эйка. Кража, деньги и распил</h3>
+      <p class="desc">Почти сто лет мир пытается разгадать загадку исчезнувшей части Гентского алтаря. Этот шедевр пережил иконоборцев, революции, пожары и нацистскую охоту за искусством.</p>
     </div>
-  </a>
-  <div class="body">
-    <h3>Код Ван Эйка. Кража, деньги и распил: приключения Гентского алтаря</h3>
-    <p class="desc">Почти сто лет мир пытается разгадать загадку исчезнувшей части Гентского алтаря. Этот шедевр пережил иконоборцев, революции, пожары и нацистскую охоту за искусством</p>
-  </div>
-<article class="card" data-card data-tags="лувр мода выставка louvre couture костюм история">
-  <a href="https://youtu.be/LyWQrdfF22Q" target="_blank">
-    <div class="thumb">
-      <img src="https://img.youtube.com/vi/LyWQrdfF22Q/0.jpg" alt="О чём молчат платья: модный приговор в Лувре">
+  </article>
+
+  <article class="card" data-card data-tags="лувр мода выставка louvre couture костюм история">
+    <a href="https://youtu.be/LyWQrdfF22Q" target="_blank">
+      <div class="thumb">
+        <img src="https://img.youtube.com/vi/LyWQrdfF22Q/0.jpg" alt="О чём молчат платья: модный приговор в Лувре">
+      </div>
+    </a>
+    <div class="body">
+      <h3>О чём молчат платья: модный приговор в Лувре</h3>
+      <p class="desc">Что, если платья умеют говорить? А если они молчат — то о чём?<br>
+      Это видео — не просто экскурсия по выставке Louvre Couture. Это разговор о тайнах, спрятанных в складках шелка, шипах металла и линиях силуэтов.</p>
     </div>
-  </a>
-  <div class="body">
-    <h3>О чём молчат платья: модный приговор в Лувре</h3>
-    <p class="desc">Что, если платья умеют говорить? А если они молчат — то о чём?<br>
-    Это видео — не просто экскурсия по выставке Louvre Couture. Это разговор о тайнах, спрятанных в складках шелка, шипах металла и линиях силуэтов.</p>
-  </div>
-</article>
+  </article>
+
 </div>
+
 </section>
 <section id="about" class="section"><h2 class="h2">О проекте</h2><p>Мы говорим о том, как литература, искусство и история переплетаются и помогают понять прошлое, настоящее и самих себя.</p></section>
 <section id="contact" class="section"><h2 class="h2">Контакты</h2><p>YouTube: <a href="https://www.youtube.com/@art-pause">Art pause</a></p></section>
