--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </article>
 
       <!-- Карточка 3 -->
-      <article class="card" data-card data-tags="лувр мода выставка louvre couture костюм история">
+      <article class="card" data-card data-tags="лувр мода выставка louvre couture костюм история мода">
         <a href="https://youtu.be/LyWQrdfF22Q" target="_blank">
           <div class="thumb">
             <img src="https://img.youtube.com/vi/LyWQrdfF22Q/0.jpg" alt="О чём молчат платья: модный приговор в Лувре">
