--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="assets/banner.jpg" alt="Art pause banner">
     <div class="hero-text">
       Там, где кончается кисть<br>
-      <span>Авторские лекции Ольги Федоровской.</span>
+      <span>Авторские лекции Ольги Федоровской</span>
     </div>
   </section>
 
@@ -37,14 +37,14 @@
     <div class="grid">
 
       <!-- Карточка 1 -->
-      <article class="card" data-card data-tags="анна ярославна франция киевская русь средневековье">
+      <article class="card" data-card data-tags="анна ярославна франция киевская русь средневековье реймсский собор готика коронация">
         <a href="https://youtu.be/YAJPMhlDSFM" target="_blank">
           <div class="thumb">
             <img src="https://img.youtube.com/vi/YAJPMhlDSFM/0.jpg" alt="Анна Ярославна и 33 короля. Тайны Реймсского собора">
           </div>
         </a>
         <div class="body">
-          <h3>История собора и тайны архитектуры</h3>
+          <h3>Анна Ярославна и 33 короля. Тайны Реймсского собора</h3>
           <p class="desc">Реймс — город, где короновали французских королей, где сквозь готические витражи светит история.</p>
         </div>
       </article>
