--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <!-- О проекте -->
   <section id="about" class="section">
     <h2 class="h2">О проекте</h2>
-    <p>Мы говорим о том, как литература, искусство и история переплетаются и помогают понять прошлое, настоящее и самих себя.</p>
+    <p>Здесь мы говорим о том, как литература, искусство и история переплетаются и помогают понять прошлое, настоящее и самих себя.</p>
   </section>
 
   <!-- Контакты -->
