--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+
   <title>Art pause — лекции об искусстве, литературе и истории</title>
+
+  <!-- SEO мета-теги -->
+  <meta name="description" content="Art pause — авторские лекции Ольги Федоровской о литературе, искусстве и истории. От готических соборов до высокой моды, от текстов до визуальной культуры.">
+  <meta name="keywords" content="лекции по искусству, литература, история, визуальная культура, искусствоведение, готика, Лувр, соборы, мода, Art pause, Ольга Федоровская">
+  <meta name="author" content="Ольга Федоровская">
+
+  <!-- Open Graph для соцсетей -->
+  <meta property="og:title" content="Art pause — лекции об искусстве, литературе и истории">
+  <meta property="og:description" content="Авторские лекции Ольги Федоровской о визуальной культуре, текстах и образах разных эпох.">
+  <meta property="og:image" content="https://ofedorovskaya-rgb.github.io/artpause-site/assets/banner.jpg">
+  <meta property="og:url" content="https://ofedorovskaya-rgb.github.io/artpause-site/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Art pause — лекции об искусстве, литературе и истории">
+  <meta name="twitter:description" content="Авторские лекции Ольги Федоровской о визуальной культуре, текстах и образах разных эпох.">
+  <meta name="twitter:image" content="https://ofedorovskaya-rgb.github.io/artpause-site/assets/banner.jpg">
+
   <link rel="stylesheet" href="styles.css">
   <script defer src="scripts.js"></script>
 </head>
@@ -11,7 +31,6 @@
 <div class="container">
 
   <header class="header">
-    <img src="favicon.svg" class="logo" alt="Art pause">
     <div class="title">Art pause</div>
     <nav class="nav">
       <a href="#lectures">Лекции</a>
