--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>Art pause — лекции об искусстве, литературе и истории</title>
 
   <!-- SEO мета-теги -->
-  <meta name="description" content="Art pause — авторские лекции Ольги Федоровской о литературе, искусстве и истории. От готических соборов до высокой моды, от текстов до визуальной культуры.">
+  <meta name="description" content="Art pause — авторские лекции Ольги Федоровской о литературе, искусстве и истории. От готических соборов до высокой моды, от текстов до визуальной культуры">
   <meta name="keywords" content="лекции по искусству, литература, история, визуальная культура, искусствоведение, готика, Лувр, соборы, мода, Art pause, Ольга Федоровская">
   <meta name="author" content="Ольга Федоровская">
 
   <!-- Open Graph для соцсетей -->
   <meta property="og:title" content="Art pause — лекции об искусстве, литературе и истории">
-  <meta property="og:description" content="Авторские лекции Ольги Федоровской о визуальной культуре, текстах и образах разных эпох.">
+  <meta property="og:description" content="Авторские лекции Ольги Федоровской о визуальной культуре, текстах и образах разных эпох">
   <meta property="og:image" content="https://ofedorovskaya-rgb.github.io/artpause-site/assets/banner.jpg">
   <meta property="og:url" content="https://ofedorovskaya-rgb.github.io/artpause-site/">
   <meta property="og:type" content="website">
@@ -21,7 +21,7 @@
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Art pause — лекции об искусстве, литературе и истории">
-  <meta name="twitter:description" content="Авторские лекции Ольги Федоровской о визуальной культуре, текстах и образах разных эпох.">
+  <meta name="twitter:description" content="Авторские лекции Ольги Федоровской о визуальной культуре, текстах и образах разных эпох">
   <meta name="twitter:image" content="https://ofedorovskaya-rgb.github.io/artpause-site/assets/banner.jpg">
 
   <link rel="stylesheet" href="styles.css">
