--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Art pause — лекции об искусстве, литературе и истории</title>
 
   <!-- SEO мета-теги -->
-  <meta name="description" content="Art pause — авторские лекции Ольги Федоровской о литературе, искусстве и истории. От готических соборов до высокой моды, от текстов до визуальной культуры">
+  <meta name="description" content="Art pause — авторские лекции Ольги Федоровской о литературе, искусстве и истории, от готических соборов до высокой моды, от текстов до визуальной культуры">
   <meta name="keywords" content="лекции по искусству, литература, история, визуальная культура, искусствоведение, готика, Лувр, соборы, мода, Art pause, Ольга Федоровская">
   <meta name="author" content="Ольга Федоровская">
 
@@ -108,6 +108,16 @@
   <section id="contact" class="section">
     <h2 class="h2">Контакты</h2>
     <p>YouTube: <a href="https://www.youtube.com/@art-pause">Art pause</a></p>
+  </section>
+
+  <!-- Соцсети -->
+  <section id="social" class="section">
+    <h2 class="h2">Следите за проектом</h2>
+    <div class="social-links">
+      <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank">YouTube</a>
+      <a href="https://www.instagram.com/art.pause_?igsh=MW43d2E2ZzZrYmZ6aw==&utm_source=ig_contact_invite" target="_blank">Instagram</a>
+      <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank">Threads</a>
+    </div>
   </section>
 
   <footer class="footer">© 2025 Art pause · «Там, где кончается кисть»</footer>
