--- a/index.html
+++ b/index.html
@@ -110,13 +110,28 @@
     <p>YouTube: <a href="https://www.youtube.com/@art-pause">Art pause</a></p>
   </section>
 
-  <!-- Соцсети -->
+   <!-- Соцсети -->
   <section id="social" class="section">
     <h2 class="h2">Следите за проектом</h2>
     <div class="social-links">
-      <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank">YouTube</a>
-      <a href="https://www.instagram.com/art.pause_?igsh=MW43d2E2ZzZrYmZ6aw==&utm_source=ig_contact_invite" target="_blank">Instagram</a>
-      <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank">Threads</a>
+      <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank" class="social-link">
+        <svg viewBox="0 0 24 24" class="icon">
+          <path fill="currentColor" d="M10,15L15,12L10,9V15M21,6.5C21,5.12 19.88,4 18.5,4H5.5C4.12,4 3,5.12 3,6.5V17.5C3,18.88 4.12,20 5.5,20H18.5C19.88,20 21,18.88 21,17.5V6.5Z"/>
+        </svg>
+        YouTube
+      </a>
+      <a href="https://www.instagram.com/art.pause_?igsh=MW43d2E2ZzZrYmZ6aw==&utm_source=ig_contact_invite" target="_blank" class="social-link">
+        <svg viewBox="0 0 24 24" class="icon">
+          <path fill="currentColor" d="M7,2C4.24,2 2,4.24 2,7V17C2,19.76 4.24,22 7,22H17C19.76,22 22,19.76 22,17V7C22,4.24 19.76,2 17,2H7M12,7C14.76,7 17,9.24 17,12C17,14.76 14.76,17 12,17C9.24,17 7,14.76 7,12C7,9.24 9.24,7 12,7M18.5,6.5C19.33,6.5 20,7.17 20,8C20,8.83 19.33,9.5 18.5,9.5C17.67,9.5 17,8.83 17,8C17,7.17 17.67,6.5 18.5,6.5Z"/>
+        </svg>
+        Instagram
+      </a>
+      <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank" class="social-link">
+        <svg viewBox="0 0 24 24" class="icon">
+          <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12S6.48 22 12 22s10-4.48 10-10S17.52 2 12 2Zm1.45 16.93c-3.8 0-6.52-2.42-6.52-6.13 0-3.71 2.72-6.13 6.52-6.13 3.04 0 5.45 1.66 6.05 4.46h-2.2c-.46-1.42-1.72-2.3-3.86-2.3-2.45 0-4.2 1.64-4.2 3.97s1.75 3.97 4.2 3.97c1.97 0 3.3-.88 3.79-2.26h-3.86v-1.67h6.17c.07.42.1.83.1 1.28 0 3.4-2.51 5.81-6.69 5.81Z"/>
+        </svg>
+        Threads
+      </a>
     </div>
   </section>
 
