--- a/index.html
+++ b/index.html
@@ -30,19 +30,29 @@
 <body>
 <div class="container">
 
-  <header class="header">
+ <header class="header">
+  <div class="title-block">
     <div class="title">Art pause</div>
+
     <div class="social-links">
-      <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank" class="social-link">YouTube</a>
-      <a href="https://www.instagram.com/art.pause_?igsh=MW43d2E2ZzZrYmZ6aw==&utm_source=ig_contact_invite" target="_blank" class="social-link">Instagram</a>
-      <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank" class="social-link">Threads</a>
+      <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank" aria-label="YouTube">
+        <img src="assets/youtube.png" alt="YouTube" class="social-icon">
+      </a>
+      <a href="https://www.instagram.com/art.pause_/?igsh=MW43d2E2ZzZrYmZ6aw==" target="_blank" aria-label="Instagram">
+        <img src="assets/instagram.svg" alt="Instagram" class="social-icon">
+      </a>
+      <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank" aria-label="Threads">
+        <img src="assets/threads.svg" alt="Threads" class="social-icon">
+      </a>
     </div>
-    <nav class="nav">
-      <a href="#lectures">Лекции</a>
-      <a href="#about">О проекте</a>
-      <a href="#contact">Контакты</a>
-    </nav>
-  </header>
+  </div>
+
+  <nav class="nav">
+    <a href="#lectures">Лекции</a>
+    <a href="#about">О проекте</a>
+    <a href="#contact">Контакты</a>
+  </nav>
+</header>
 
   <!-- Баннер -->
   <section class="hero">
