--- a/index.html
+++ b/index.html
@@ -30,29 +30,29 @@
 <body>
 <div class="container">
 
- <header class="header">
-  <div class="title-block">
-    <div class="title">Art pause</div>
+  <header class="header">
+    <div class="title-block">
+      <div class="title">Art pause</div>
 
-    <div class="social-links">
-      <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank" aria-label="YouTube">
-        <img src="assets/youtube.png" alt="YouTube" class="social-icon">
-      </a>
-      <a href="https://www.instagram.com/art.pause_/?igsh=MW43d2E2ZzZrYmZ6aw==" target="_blank" aria-label="Instagram">
-        <img src="assets/instagram.svg" alt="Instagram" class="social-icon">
-      </a>
-      <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank" aria-label="Threads">
-        <img src="assets/threads.svg" alt="Threads" class="social-icon">
-      </a>
+      <div class="social-links">
+        <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank" aria-label="YouTube">
+          <img src="assets/youtube.png" alt="YouTube" class="social-icon">
+        </a>
+        <a href="https://www.instagram.com/art.pause_/?igsh=MW43d2E2ZzZrYmZ6aw==" target="_blank" aria-label="Instagram">
+          <img src="assets/instagram.svg" alt="Instagram" class="social-icon">
+        </a>
+        <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank" aria-label="Threads">
+          <img src="assets/threads.svg" alt="Threads" class="social-icon">
+        </a>
+      </div>
     </div>
-  </div>
 
-  <nav class="nav">
-    <a href="#lectures">Лекции</a>
-    <a href="#about">О проекте</a>
-    <a href="#contact">Контакты</a>
-  </nav>
-</header>
+    <nav class="nav">
+      <a href="#lectures">Лекции</a>
+      <a href="#about">О проекте</a>
+      <a href="#contact">Контакты</a>
+    </nav>
+  </header>
 
   <!-- Баннер -->
   <section class="hero">
@@ -122,7 +122,7 @@
   <!-- Контакты -->
   <section id="contact" class="section">
     <h2 class="h2">Контакты</h2>
-    <p>YouTube: <a href="https://www.youtube.com/@art-pause">Art pause</a></p>
+    <p>Email: <a href="mailto:yourmail@example.com">yourmail@example.com</a></p>
   </section>
 
   <footer class="footer">© 2025 Art pause · «Там, где кончается кисть»</footer>
