--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
       <div class="title">Art pause</div>
 
       <div class="social-links">
-        <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank" aria-label="YouTube">
-          <img src="assets/youtube.png" alt="YouTube" class="social-icon">
-        </a>
-        <a href="https://www.instagram.com/art.pause_/?igsh=MW43d2E2ZzZrYmZ6aw==" target="_blank" aria-label="Instagram">
-          <img src="assets/instagram.svg" alt="Instagram" class="social-icon">
-        </a>
-        <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank" aria-label="Threads">
-          <img src="assets/threads.svg" alt="Threads" class="social-icon">
-        </a>
-      </div>
-    </div>
+  <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank" aria-label="YouTube">
+    <img src="assets/yt_icon_red_digital.png" alt="YouTube" class="social-icon">
+  </a>
+  <a href="https://www.instagram.com/art.pause_/?igsh=MW43d2E2ZzZrYmZ6aw==" target="_blank" aria-label="Instagram">
+    <img src="assets/Instagram_Glyph_Gradient.svg" alt="Instagram" class="social-icon">
+  </a>
+  <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank" aria-label="Threads">
+    <img src="assets/threads-seeklogo-4.svg" alt="Threads" class="social-icon">
+  </a>
+</div>
 
     <nav class="nav">
       <a href="#lectures">Лекции</a>
