--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <title>Art pause — лекции об искусстве, литературе и истории</title>
-
+  <meta name="google-site-verification" content="Jjly0mx1OCFqAxMadk7Sa-lTmeGyhE__udf3_zWJ8_M" />
   <!-- SEO мета-теги -->
   <meta name="description" content="Art pause — авторские лекции Ольги Федоровской о литературе, искусстве и истории, от готических соборов до высокой моды, от текстов до визуальной культуры">
   <meta name="keywords" content="лекции по искусству, литература, история, визуальная культура, искусствоведение, готика, Лувр, соборы, мода, Art pause, Ольга Федоровская">
