--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
   <meta name="twitter:description" content="Авторские лекции Ольги Федоровской о визуальной культуре, текстах и образах разных эпох">
   <meta name="twitter:image" content="https://ofedorovskaya-rgb.github.io/artpause-site/assets/banner.jpg">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVQ03JRGPM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-LVQ03JRGPM');
+  </script>
+
   <link rel="stylesheet" href="styles.css">
   <script defer src="scripts.js"></script>
 </head>
@@ -35,22 +44,23 @@
       <div class="title">Art pause</div>
 
       <div class="social-links">
-  <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank" aria-label="YouTube">
-    <img src="assets/yt_icon_red_digital.png" alt="YouTube" class="social-icon">
-  </a>
-  <a href="https://www.instagram.com/art.pause_/?igsh=MW43d2E2ZzZrYmZ6aw==" target="_blank" aria-label="Instagram">
-    <img src="assets/Instagram_Glyph_Gradient.svg" alt="Instagram" class="social-icon">
-  </a>
-  <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank" aria-label="Threads">
-    <img src="assets/threads-seeklogo-4.svg" alt="Threads" class="social-icon">
-  </a>
-</div>
+        <a href="https://youtube.com/@art-pause?si=LYZDXYF-IDbBQ9h5" target="_blank" aria-label="YouTube">
+          <img src="assets/yt_icon_red_digital.png" alt="YouTube" class="social-icon">
+        </a>
+        <a href="https://www.instagram.com/art.pause_/?igsh=MW43d2E2ZzZrYmZ6aw==" target="_blank" aria-label="Instagram">
+          <img src="assets/Instagram_Glyph_Gradient.svg" alt="Instagram" class="social-icon">
+        </a>
+        <a href="https://www.threads.com/@art.pause_?igshid=NTc4MTIwNjQ2YQ==" target="_blank" aria-label="Threads">
+          <img src="assets/threads-seeklogo-4.svg" alt="Threads" class="social-icon">
+        </a>
+      </div>
 
-    <nav class="nav">
-      <a href="#lectures">Лекции</a>
-      <a href="#about">О проекте</a>
-      <a href="#contact">Контакты</a>
-    </nav>
+      <nav class="nav">
+        <a href="#lectures">Лекции</a>
+        <a href="#about">О проекте</a>
+        <a href="#contact">Контакты</a>
+      </nav>
+    </div>
   </header>
 
   <!-- Баннер -->
